# apery

./: .gitignore  CMakeLists.txt  gen_cmake  mingw.txt
src/: Makefile  asio_socket_streambuf.hpp  bitboard.hpp  book.cpp  book.hpp  common.cpp  common.hpp  crc32.hpp  evalList.cpp  evaluate.cpp  evaluate.hpp  generateMoves.cpp  generateMoves.hpp  godwhaleIo.cpp  godwhaleIo.hpp  ifdef.hpp  init.cpp  learner.hpp  main.cpp  move.cpp  move.hpp  movePicker.cpp  position.cpp  position.hpp  run-loop.sh  search.cpp  search.hpp  square.hpp  thread.cpp  thread.hpp  timeManager.cpp  tt.cpp  tt.hpp  usi.cpp  usi.hpp  version.hpp
